# double-conversion

./: .hgignore  .hgtags  AUTHORS  LICENSE  README.markdown  double-conversion.cabal  fp-conversion.cabal  stack-8.4.3.yaml
.github/workflows/: ci.yml
Data/Double/: Conversion.hs
Data/Double/Conversion/: ByteString.hs  ByteStringBuilder.hs  Convertable.hs  FFI.hs  Text.hs  TextBuilder.hs
Data/Double/Conversion/Internal/: ByteString.hs  ByteStringBuilder.hs  FFI.hs  Text.hs  TextBuilder.hs
Data/FP/Conversion/: ByteString.hs  ByteStringBuilder.hs  Convertable.hs  FFI.hs  Text.hs  TextBuilder.hs
benchmarks/: Benchmarks.hs  cabal.project  double-conversion-benchmarks.cabal  sprintf.c  stack.yaml
cbits/: hs-double-conversion.cc
demo/: Demo.hs  Makefile
double-conversion/: Makefile
double-conversion/cmake/: Config.cmake.in
double-conversion/double-conversion/: SConscript  bignum-dtoa.cc  bignum-dtoa.h  bignum.cc  bignum.h  cached-powers.cc  cached-powers.h  diy-fp.cc  diy-fp.h  double-conversion.cc  double-conversion.h  fast-dtoa.cc  fast-dtoa.h  fixed-dtoa.cc  fixed-dtoa.h  ieee.h  strtod.cc  strtod.h  utils.h
double-conversion/msvc/: double-conversion.sln  double-conversion.vcxproj  double-conversion.vcxproj.filters
double-conversion/msvc/run_tests/: run_tests.vcxproj  run_tests.vcxproj.filters
double-conversion/src/: cached-powers.cc
include/: hs-double-conversion.h
jsbits/: hs-double-conversion.js
src/: conversions.cc  double-conversion.cc  fast-dtoa.cc  utils.cc  utils.h  v8utils.h
tests/: Properties.hs  Regressions.hs  double-conversion-tests.cabal
